# registration

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
app/: dependencies.py  main.py
app/models/: __init__.py  cliente.py  vip.py
app/routers/: vip.py
app/schemas/: vip.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: base.html  dashboard.html  register.html
