[project]
name = "registraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "jinja2==3.1.3",
    "pillow==10.2.0",
    "pymysql==1.1.0",
    "python-barcode==0.15.1",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.20",
    "sqlalchemy==2.0.28",
    "uvicorn==0.29.0",
]
